mission control ready

--- a/css/parset.css
+++ b/css/parset.css
@@ -15,8 +15,8 @@
 .ribbon path.active { fill-opacity: .9; }
 .ribbon-mouse path { fill-opacity: 0; }
 
-.category-0 { fill: #1f77b4; stroke: #1f77b4; }
-.category-1 { fill: #ff7f0e; stroke: #ff7f0e; }
+.category-0 { fill: #051440; stroke: #051440; }
+.category-1 { fill: #ec1920; stroke: #ec1920; }
 .category-2 { fill: #2ca02c; stroke: #2ca02c; }
 .category-3 { fill: #d62728; stroke: #d62728; }
 .category-4 { fill: #9467bd; stroke: #9467bd; }
@@ -27,7 +27,7 @@
 .category-9 { fill: #17becf; stroke: #17becf; }
 
 .tooltip {
-    background-color: rgba(242, 242, 242, .6);
+    background-color: rgba(255, 255, 255, 0.6);
     position: absolute;
     padding: 5px;
 }
